--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ openpyxl    # For XLSX reports
 reportlab   # For PDF reports
 email-validator # Required by Flask-WTF for Email() validator
 Flask-PyMongo # For MongoDB integration
+pytz # For timezone handling
